; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_sata_nv.c_nv_adma_host_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_sata_nv.c_nv_adma_host_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_host = type { i32 }
%struct.pci_dev = type { i32 }

@NV_MCP_SATA_CFG_20 = common dso_local global i32 0, align 4
@NV_MCP_SATA_CFG_20_PORT0_EN = common dso_local global i32 0, align 4
@NV_MCP_SATA_CFG_20_PORT0_PWB_EN = common dso_local global i32 0, align 4
@NV_MCP_SATA_CFG_20_PORT1_EN = common dso_local global i32 0, align 4
@NV_MCP_SATA_CFG_20_PORT1_PWB_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ata_host*)* @nv_adma_host_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nv_adma_host_stop(%struct.ata_host* %0) #0 {
  %2 = alloca %struct.ata_host*, align 8
  %3 = alloca %struct.pci_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.ata_host* %0, %struct.ata_host** %2, align 8
  %5 = load %struct.ata_host*, %struct.ata_host** %2, align 8
  %6 = getelementptr inbounds %struct.ata_host, %struct.ata_host* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.pci_dev* @to_pci_dev(i32 %7)
  store %struct.pci_dev* %8, %struct.pci_dev** %3, align 8
  %9 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %10 = load i32, i32* @NV_MCP_SATA_CFG_20, align 4
  %11 = call i32 @pci_read_config_dword(%struct.pci_dev* %9, i32 %10, i32* %4)
  %12 = load i32, i32* @NV_MCP_SATA_CFG_20_PORT0_EN, align 4
  %13 = load i32, i32* @NV_MCP_SATA_CFG_20_PORT0_PWB_EN, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @NV_MCP_SATA_CFG_20_PORT1_EN, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @NV_MCP_SATA_CFG_20_PORT1_PWB_EN, align 4
  %18 = or i32 %16, %17
  %19 = xor i32 %18, -1
  %20 = load i32, i32* %4, align 4
  %21 = and i32 %20, %19
  store i32 %21, i32* %4, align 4
  %22 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %23 = load i32, i32* @NV_MCP_SATA_CFG_20, align 4
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @pci_write_config_dword(%struct.pci_dev* %22, i32 %23, i32 %24)
  %26 = load %struct.ata_host*, %struct.ata_host** %2, align 8
  %27 = call i32 @nv_ck804_host_stop(%struct.ata_host* %26)
  ret void
}

declare dso_local %struct.pci_dev* @to_pci_dev(i32) #1

declare dso_local i32 @pci_read_config_dword(%struct.pci_dev*, i32, i32*) #1

declare dso_local i32 @pci_write_config_dword(%struct.pci_dev*, i32, i32) #1

declare dso_local i32 @nv_ck804_host_stop(%struct.ata_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
